k8s/istio-telemetry.yml
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: external-prometheus
  namespace: observabilidad
spec:
  hosts:
    - prometheus.monitoring.svc.cluster.local
  ports:
    - number: 9090
      name: http-metrics
      protocol: HTTP
  resolution: DNS
  location: MESH_INTERNAL
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: external-kiali
  namespace: observabilidad
spec:
  hosts:
    - kiali.istio-system.svc.cluster.local
  ports:
    - number: 20001
      name: http-kiali
      protocol: HTTP
  resolution: DNS
  location: MESH_INTERNAL
